dialect, sql execution tests